<resources>
    <string name="app_name">Tweet Radar</string>
    <string name="welcome">Welcome to Twitter</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="welcome_subhead">See what\'s happening in the world right now</string>
    <string name="dot">&#8226;</string>
    <string name="tweeet">Tweet</string>
    <string name="c140">140</string>
    <string name="whats_happening">What\'s Happening?</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="save_draft">Do you want to save draft?</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="mention">Mentions</string>
    <string name="home">Home</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="search">Search</string>
    <string name="tweets">Tweets</string>
    <string name="favroites">Favorites</string>
</resources>
